crates/rlf-macros/tests/fail/undefined_phrase.rs
use rlf::rlf;

rlf! {
    card = "card";
    draw(n) = "Draw {n} {cards:n}.";
}

fn main() {}
